<resources>
    <string name="app_name">MusicApplication</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_discovery">Discovery</string>
    <string name="title_settings">Settings</string>
    <string name="title_library">Library</string>
    <string name="image_description">image description</string>
    <string name="title_album_hot">Albums hot</string>
    <string name="text_song_artist">Song artist</string>
    <string name="text_song_title">Song title</string>
    <string name="title_recommended_songs">Recommended songs</string>
    <string name="title_album_detail">Album detail</string>
    <string name="title_song_list">Song list</string>
    <string name="text_number_of_song">Number of songs: %d</string>
    <string name="title_more_album">Albums hot</string>
    <string name="action_download">Download</string>
    <string name="action_favorite">Add to favorite</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="action_add_to_play_next">Play next</string>
    <string name="action_view_album">View album</string>
    <string name="action_view_artist">View artist</string>
    <string name="action_block">Block</string>
    <string name="action_report_error">Report error</string>
    <string name="action_view_song_info">View song details</string>
    <string name="text_song_detail_title">Title: %s</string>
    <string name="text_song_detail_artist">Artist: %s</string>
    <string name="text_song_detail_album">Album: %s</string>
    <string name="text_song_detail_duration">Duration: %d</string>
    <string name="text_song_detail_counter">Number of plays: %d</string>
    <string name="text_song_detail_replay">Number of replay: %d</string>
    <string name="text_song_detail_favorite">Is your favorite song: %s</string>
    <string name="text_song_detail_genre">Genre: %s</string>
    <string name="text_song_detail_published_year">Publish year: %s</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_na">N/A</string>
    <string name="label_song_title">Song title</string>
    <string name="label_song_artist">Song artist</string>
    <string name="image_button_description">Image button</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="label_place_holder">…</string>
    <string name="label_under_score">_ ___ _</string>
    <string name="label_time_place_holder">--:--</string>
    <string name="permission_denied_message">Application cannot play music without post notification permission. Please grant post notification to continue.</string>
    <string name="action_agree">Agree</string>
    <string name="permission_description">This application need post notification permission to play music correctly and give you more experience when using app. Would you agree permit app use this permission?</string>
    <string name="title_recent_song">Recent heard</string>
    <string name="title_favorite">Favorite songs</string>
    <string name="text_playlist_name">Playlist name</string>
    <string name="btn_playlist_desc">Add new playlist</string>
    <string name="text_create_a_playlist">Create a playlist</string>
    <string name="title_playlist">Playlists</string>
    <string name="playlist_name_hint">Playlist name</string>
    <string name="title_create_playlist">Create playlist</string>
    <string name="action_create">Create</string>
    <string name="action_cancel">Cancel</string>
    <string name="error_empty_playlist_name">Playlist name cannot be empty</string>
    <string name="error_playlist_already_exists">This playlist name already exists. Please use other name.</string>
    <string name="add_to_playlist_success">The song has been add to the playlist \"%s\" successfully!</string>
    <string name="error_add_to_playlist">This song already exists in your selected playlist.</string>
    <string name="title_playlist_detail">Detail playlist</string>
    <string name="artist_name">Artist name</string>
    <string name="number_of_interest">Number of interest: %d</string>
    <string name="action_interest">Interest</string>
    <string name="title_artist">Featured Artists</string>
    <string name="title_artist_detail">Artist information</string>
    <string name="detail_artist_name">Artist name: %s</string>
    <string name="detail_number_of_interest">Number of interest: %d</string>
    <string name="detail_your_interested_artist">Your interested artist: %s</string>
    <string name="title_most_heard">Most listened songs</string>
    <string name="title_for_you">For you</string>
    <string name="languages_header">Languages</string>
    <string name="theme_header">Theme</string>
    <string name="font_size_header">Font size</string>
    <string name="language_title">Application language</string>
    <string name="font_size_title">Display font size</string>
    <string name="dark_mode_title">Dark mode</string>
</resources>