<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dialog.SongInfoDialogFragment">

    <ImageView
        android:id="@+id/image_song_info_avatar"
        android:layout_width="@dimen/song_detail_avatar_width"
        android:layout_height="@dimen/song_detail_avatar_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_8"
        android:contentDescription="@string/image_description"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        android:background="@color/black" />

    <TextView
        android:id="@+id/text_song_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        android:text="@string/text_song_detail_title"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <TextView
        android:id="@+id/text_song_detail_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        android:text="@string/text_song_detail_artist"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <TextView
        android:id="@+id/text_song_detail_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        android:text="@string/text_song_detail_album"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <TextView
        android:id="@+id/text_song_detail_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        android:text="@string/text_song_detail_duration"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <TextView
        android:id="@+id/text_song_detail_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        android:text="@string/text_song_detail_counter"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <TextView
        android:id="@+id/text_song_detail_replay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        android:text="@string/text_song_detail_replay"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <TextView
        android:id="@+id/text_song_detail_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        android:text="@string/text_song_detail_favorite"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <TextView
        android:id="@+id/text_song_detail_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        android:text="@string/text_song_detail_genre"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <TextView
        android:id="@+id/text_song_detail_published_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/text_song_detail_published_year"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
</LinearLayout>