<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.discovery.artist.detail.DetailArtistFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail_artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_detail_artist_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/title_artist_detail"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/image_detail_artist_avatar"
        android:layout_width="@dimen/detail_artist_avatar_width"
        android:layout_height="@dimen/detail_artist_avatar_height"
        android:layout_marginTop="@dimen/margin_8"
        android:contentDescription="@string/image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_detail_artist"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/text_detail_artist_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_64"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_64"
        android:text="@string/detail_artist_name"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_detail_artist_avatar" />

    <TextView
        android:id="@+id/text_detail_artist_interest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/detail_number_of_interest"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        app:layout_constraintEnd_toEndOf="@+id/text_detail_artist_name"
        app:layout_constraintStart_toStartOf="@+id/text_detail_artist_name"
        app:layout_constraintTop_toBottomOf="@+id/text_detail_artist_name" />

    <TextView
        android:id="@+id/text_detail_artist_your_interest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/detail_your_interested_artist"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        app:layout_constraintEnd_toEndOf="@+id/text_detail_artist_name"
        app:layout_constraintStart_toStartOf="@+id/text_detail_artist_name"
        app:layout_constraintTop_toBottomOf="@+id/text_detail_artist_interest" />

    <include
        android:id="@+id/include_artist_song"
        layout="@layout/partial_song_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_detail_artist_your_interest" />
</androidx.constraintlayout.widget.ConstraintLayout>