<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/card_corner_radius_16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MiniPlayerStyle"
        tools:context=".ui.playing.MiniPlayerFragment">

        <ImageButton
            android:id="@+id/btn_mini_player_skip_next"
            android:layout_width="@dimen/button_width_48"
            android:layout_height="@dimen/button_height_48"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image_button_description"
            android:src="@drawable/ic_skip_next"
            app:layout_constraintBottom_toBottomOf="@+id/image_mini_player_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image_mini_player_avatar"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/btn_mini_player_play_pause"
            android:layout_width="@dimen/button_width_48"
            android:layout_height="@dimen/button_height_48"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image_button_description"
            android:src="@drawable/ic_play_circle"
            app:layout_constraintBottom_toBottomOf="@+id/btn_mini_player_skip_next"
            app:layout_constraintEnd_toStartOf="@+id/btn_mini_player_skip_next"
            app:layout_constraintTop_toTopOf="@+id/btn_mini_player_skip_next"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageView
            android:id="@+id/image_mini_player_avatar"
            android:layout_width="@dimen/mini_player_avatar_width"
            android:layout_height="@dimen/mini_player_avatar_height"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_8"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/text_mini_player_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_4"
            android:text="@string/label_song_title"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/btn_mini_player_favorite"
            app:layout_constraintStart_toEndOf="@+id/image_mini_player_avatar" />

        <TextView
            android:id="@+id/text_mini_player_artist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:text="@string/label_song_artist"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            app:layout_constraintEnd_toEndOf="@+id/text_mini_player_title"
            app:layout_constraintStart_toStartOf="@+id/text_mini_player_title"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <ImageButton
            android:id="@+id/btn_mini_player_favorite"
            android:layout_width="@dimen/button_width_48"
            android:layout_height="@dimen/button_height_48"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image_button_description"
            android:src="@drawable/ic_menu_favorite"
            app:layout_constraintBottom_toBottomOf="@+id/btn_mini_player_play_pause"
            app:layout_constraintEnd_toStartOf="@+id/btn_mini_player_play_pause"
            app:layout_constraintTop_toTopOf="@+id/btn_mini_player_play_pause"
            tools:ignore="DuplicateSpeakableTextCheck,RedundantDescriptionCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>